project(ADEKF_EXAMPLES)
cmake_minimum_required(VERSION 3.0)

find_package(ADEKF CONFIG REQUIRED)
find_package(Boost 1.37 REQUIRED)

add_executable(velocity_without_orientation_tracking_EKF velocity_without_orientation_tracking_EKF.cpp)
target_link_libraries(velocity_without_orientation_tracking_EKF PRIVATE ADEKF::ADEKF)


add_executable(velocity_without_orientation_tracking_UKF velocity_without_orientation_tracking_UKF.cpp)
target_link_libraries(velocity_without_orientation_tracking_UKF PRIVATE ADEKF::ADEKF)

